--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
     "name": "AIManipulator",
-    "description":"Manipulates MIT App inventor files",
+    "description": "Manipulates MIT App inventor files",
     "version": "1.0.0",
     "author": "Eric Simon",
     "license": "UNLICENSED",
     "repository": "gitlabnone:doesnotexist/repo",
     "dependencies": {
-        "basic-auth" : "~2.0.0",
+        "basic-auth": "~2.0.0",
         "bluebird": "~3.5.1",
         "body-parser": "~1.18.2",
         "express": "~4.16.2",
         "express-fileupload": "~0.3.0",
-        "express-session" : "~1.15.0",
+        "express-session": "~1.15.0",
+        "googleapis": "~36.0.0",
         "jszip": "~3.1.5",
         "node-zip": "~1.1.1",
-        "pug" : "~2.0.0-rc",
+        "pug": "~2.0.0-rc",
         "rimraf": "~2.6.2",
-        "session-file-store" : "~1.2.0"
+        "session-file-store": "~1.2.0"
     },
     "engines": {
         "node": ">= 0.10.0"
     },
     "scripts": {
-          "start": "node app.js"
+        "start": "node app.js"
     }
 }
