--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "express": "~4.16.2",
         "express-fileupload": "~0.3.0",
         "express-session": "~1.15.0",
-        "googleapis": "~36.0.0",
+        "googleapis": "~38.0.0",
         "jszip": "~3.1.5",
+        "jwt-decode": "2.2.0",
+        "node-cache": "4.2.0",
         "node-zip": "~1.1.1",
         "pug": "~2.0.0-rc",
         "rimraf": "~2.6.2",
-        "session-file-store": "~1.2.0"
+        "session-file-store": "~1.2.0",
+        "uuid": "3.3.2"
     },
     "engines": {
         "node": ">= 0.10.0"
